FEAT: Complete endpoints template
