# models/Bill.go
@@ -6,14 +6,15 @@ import (
 
 type Bill struct {
 	ID string `gorm:"type:varchar(50);primary_key" json:"id,omitempty"`
-	// has many BillData
-	BillData []BillData `gorm:"foreignkey:BillId" json:"-"`
-	// belongs to a BillOwner
 	BillOwnerId *int64     `gorm:"type:int" json:"bill_owner_id,omitempty"`
-	BillOwner   *BillOwner `gorm:"foreignKey:BillOwnerId" json:"-"`
 	Name        string     `gorm:"type:varchar(50)" json:"name,omitempty"`
 	RawImage    string     `gorm:"type:varchar(50)" json:"raw_image,omitempty"`
-	CreatedAt   time.Time  `gorm:"type:timestamp" json:"-"`
-	UpdatedAt   time.Time  `gorm:"type:timestamp" json:"-"`
-	DeletedAt   *time.Time `gorm:"type:timestamp" json:"-"`	
+	CreatedAt   time.Time  `gorm:"type:timestamp" json:"created_at,omitempty"`
+	UpdatedAt   time.Time  `gorm:"type:timestamp" json:"updated_at,omitempty"`
+	DeletedAt   *time.Time `gorm:"type:timestamp" json:"-"`
+	
+	// has many BillData
+	BillData []BillData `gorm:"foreignkey:BillId" json:"billData"`
+	// belongs to a BillOwner
+	BillOwner   *BillOwner `gorm:"foreignKey:BillOwnerId" json:"billOwner"`
 }
